feat: add deployment configurations for Netlify and Render